# Snowman

./: CMakeLists.txt  Lab6.rc  abilities.c  abilities.h  drawing.c  drawing.h  game.c  game.h  main.c  mechanics.c  mechanics.h  objects.c  objects.h  records.c  records.h  resource.h  resources.h  skin.c  skin.h  sound.c  sound.h  variables.h
